--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,10 +1,3 @@
-<html>
-	<head>
-	<!-- Bootstrap core CSS -->
-    <link href="../assets/styles/bootstrap.css" rel="stylesheet">
-    <title>Contact me</title>
-	</head>
-	<body>
 	<div class="container-fluid">
 		<div class="row">
 				<div class="panel-body">
@@ -14,6 +7,7 @@
   						<div class="panel-body">
     						<ul>
     						<li><a href="http://twitter.com/elenarcolepsia" target="_blank">Find me on twitter!</a></li>
+    						<li><a href="/locations">My locations</a></li>
 							</ul>
   						</div>
 					</div>
@@ -22,8 +16,3 @@
 				</div>
 			</div>
 		</div>
-			    <!-- JavaScript -->
-    <script src="../assets/javascripts/jquery-1.10.2.js"></script>
-    <script src="../assets/javascripts/bootstrap.js"></script>
-	</body>
-</html>
