Adding rout testing

--- a/app/views/locations/_location_visit_loop.html.erb
+++ b/app/views/locations/_location_visit_loop.html.erb
@@ -1,18 +1,8 @@
 <% @locations.each do |l| %>
 	<tr>
-	<td><%=l.id %></td>
-	<td><%=l.name %></td>
+	<td><%= link_to l.name, location_path(l.id) %></td>
 	<td><%=l.city %></td>
 	<td><%=l.description %></td>
 	<td><%=l.zip_code %></td>
-	<td>
-			<ul>
-			<%= l.visits.count %>
-			<% l.visits.each do  |v| %>
-				<li>sdf</li>
-				<li><%= v.user_name %></li>
-			<%end%>
-			</ul>
-	</td>
 	</tr>
 <%end%>
