--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -11,6 +11,12 @@
   						</div>
   						<div class="panel-body">
   						<table class="table" id="locations_table">
+              <tr>
+                <td>Name</td>
+                <td>City</td>
+                <td>Description</td>
+                <td>Zip</td>
+              </tr>
   						<%= render 'location_visit_loop' %>
   						</table>
   						</div>
